updated repo name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://snehal1791.github.io/Udemy-todo-list-hooks/",
+  "homepage": "https://snehal1791.github.io/todo-list-hooks/",
   "name": "todo-list-hooks",
   "version": "0.1.0",
   "private": true,
